# dding-ctf-runner

./: .gitignore  AGENTS.md  GUIDE.md  OPERATIONS.md  README.md  pyproject.toml
config/: auth_methods.yaml.example  platforms.yaml.example  profiles.toml.example  runtime.yaml.example  search_policy.yaml  submit_policy.yaml
ctf_runner/: __init__.py  archive.py  artifact_archive.py  auth.py  brief.py  browser_auth.py  browser_login.py  browser_smoke.py  callback_server.py  callback_smoke.py  cli.py  codex_doctor.py  codex_notice.py  codex_profile.py  codex_smoke.py  contest_control.py  contest_resources.py  docker_pool.py  fake_ctfd.py  file_manifest.py  full_rehearsal.py  handoff.py  ingest.py  interactive.py  multi_worker.py  paths.py  platform_base.py  platform_ctfd.py  platform_generic.py  platform_profile.py  postsolve.py  preflight.py  prompt_templates.py  public_check.py  redact.py  run_mode.py  solve_prompt.py  solve_result.py  source_scan.py  state.py  (+9 more)
docs/: architecture.md  callbacks.md  contest-operations.md  ingest.md  interactive-operations.md  platform-automation.md  postsolve.md  prompt-templates.ko.md  setup-macos.md  setup-windows-wsl.md  submit-policy.md  threat-model.md  worker-loop.md
scripts/: ctf-worker  ctf-worker-1  ctf-worker-2  ctf-worker-3  ctf-worker-4  ctf-worker-5  ctfctl  fix-codex-install.sh  fix-codex-mcp.sh  fix-codex-shell.sh  fix-playwright-deps.sh  fresh-clone-check.sh  history-scan.sh  init-codex-workers.sh  preflight.sh  release-check.sh  run-codex-worker.sh  setup-browser.sh  setup-tunnel-tools.sh  start-worker.example.sh
(+96 files in other folders)
